package info.nemoworks.fease.service;

import info.nemoworks.fease.model.Contract;

interface ContractService {
  
    Contract getContractByCode(String code);

    
}
